[package]
name = "reth-exex-liquidity"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Reth ExEx framework (v1.11.1 — two critical fixes over v1.11.0)
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1", features = ["serde"] }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.1" }

# Alloy for type-safe event decoding (versions matched to reth v1.11.0)
alloy-consensus = { version = "1.6.3", default-features = false }
alloy-sol-types = { version = "1.5.6", features = ["json"] }
alloy-primitives = { version = "1.5.6", default-features = false }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Error handling
eyre = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
rust_decimal = { version = "1.39", features = ["serde", "serde-with-str"] }

# Logging
tracing = "0.1"

# NATS messaging
async-nats = "0.37"
hex = "0.4"

# Database (for Transfers ExEx)
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "json"] }

[dev-dependencies]
chrono = "0.4"
rust_decimal_macros = "1.39"

[[bin]]
name = "exex"
path = "src/main.rs"
