[package]
name = "reth-exex-liquidity"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Reth ExEx framework
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0", features = ["jemalloc"] }
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0", features = ["serde"] }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", tag = "v2.3.0" }

# Alloy for type-safe event decoding
alloy-consensus = { version = "2.0.4", default-features = false }
alloy-sol-types = { version = "1.6", features = ["json"] }
alloy-primitives = { version = "1.6", default-features = false }

# Pool-arena shared crates: arena_layout (mmap layout / reader contract) and
# arena_writer (slot allocation + typed write API). Both are owned by
# defi_arb_rust and shared with its readers.
#
# NOTE: these are CHECKOUT-RELATIVE development path deps: they resolve when
# this repo's main checkout sits beside the defi_arb_rust main checkout (both
# directly under $HOME). A branch developed in paired worktrees must adjust
# both paths to the paired worktree layout (e.g. ../../defi_arb_rust/<ticket>)
# and restore them before merging. Before CI/deploy/MR, pin both crates to a
# git rev instead.
arena_layout = { path = "../defi_arb_rust/libs/arena_layout" }
arena_writer = { path = "../defi_arb_rust/libs/arena_writer" }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Error handling
eyre = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
rust_decimal = { version = "1.39", features = ["serde", "serde-with-str"] }

# Logging
tracing = "0.1"

# NATS messaging
async-nats = "0.37"
hex = "0.4"

# Database (for Transfers ExEx)
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "json"] }

[dev-dependencies]
chrono = "0.4"
rust_decimal_macros = "1.39"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "fluid_decoder"
harness = false

[[bin]]
name = "exex"
path = "src/main.rs"
